perses-results/3/final_remove/iter_8/PersesTempRoot_Main.java_run2.sh_20250804_225617_01/000000/compile_err.txt
./Main.java:13: error: incompatible types: String cannot be converted to Boolean[]
    return "bug";
           ^
./Main.java:59: warning: [removal] Long(long) in Long has been deprecated and marked for removal
    Object x_5 = (Number) new Long(-16);
                          ^
./Main.java:223: warning: [removal] Long(long) in Long has been deprecated and marked for removal
    return (Number) new Long(-5);
                    ^
./Main.java:326: warning: [removal] Long(long) in Long has been deprecated and marked for removal
    return (Number) new Long(89);
                    ^
1 error
3 warnings
